se arreglo un problem en la pagina sobremi

--- a/paginas/cartanatal.html
+++ b/paginas/cartanatal.html
@@ -78,6 +78,7 @@
         <h2 class="h2-carta-online"><a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/astrox/lectura-de-carta-natal'});return false;">Carta Natal (Online)</a></h2>
         <!-- Final del widget de enlace de Calendly -->
         <p class="texto-carta-online"> Sesión de 2hs en la que te vas a llevar una pdoerosa herramienta de autoconocimiento, que te va a servir para toda tu vida. Vamos a realizar la lectura en videollamada y vamos a charlar sobre las energías presentes en tu carta (Sol, Luna, Ascendente, etc). Luego te llevas un breve informe escrito para que puedas utilizarlo como guía.</p>
+        <p>Precio: $2500</p>
     </div>
     <div class="carta-revo">
         <!-- Principio del widget de enlace de Calendly -->
@@ -85,14 +86,17 @@
         <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
         <h2 class="h2-carta-online"><a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/astrox/lectura-de-carta-natal'});return false;">Carta Natal + Revolución Solar (Online)</a></h2>
         <p class="texto-carta-revo"> A la sesión de carta natal le sumamos la lectura de Revolución Solar, que nos muestra las energías que te van a acompañar durante todo el año (Tomando como referencia el dia de tu cumpleaños, para ver la posición de los planetas).Es una excelente herramienta para saber con que energías podemos contar y trabajar en ese año específico.</p>
+        <p> Precio: $3000</p>
     </div>
     <div class="carta-escrita">
       <h2 id="informe-escrito-id"  class="h2-carta-escrita"><a href="">Carta Natal (Informe escrito)</a> </h2>
       <p class="texto-carta-escrita"> Si sos de lxs que prefieren leer, el informe escrito es ideal para vos. Detallamos en una extensa cantidad de páginas, toda la infromacón sobre tu Carta Natal, hablando del Sol, Luna, Ascendente y los aspectos, para que tengas una guía (con muchísima información) y la puedas leer cuantas veces quieras. </p>
+      <p>Precio: $1500</p>
  </div>
  <div class="carta-escrita-revo">
      <h2 class="h2-carta-escrita-revo"> <a href="">Cara Natal + Revolución Solar (Informe Escrito)</a></h2>
      <p class="texto-carta-escrita-revo"> Al informe escrito le sumamos el informe de Revolución Solar, detallando las energías que te van a acompañar durante todo el año (desde el día de tu cumpleaños hasta el próximo).</p>
+     <p>Precio: $2000</p>
  </div>
 </section>
 <section class="preguntas-frecuentes">
