--- a/paginas/sobremi.html
+++ b/paginas/sobremi.html
@@ -67,7 +67,21 @@
     <!-- main del contenido-->
     <main class="sobre-mi">
         <h1> ¡Bienvenidxs, yo soy Eric!</h1>
-        <div class="big3">
+        <div id="big3-mobile" class="big3-mobilecs">
+          <div class="sol">
+            <img src="../img/sol.png" alt=" simbolo del sol">
+            <p>Cáncer</p>
+          </div>
+          <div class="luna">
+            <img src="../img/luna.png" alt=" simbolo de la luna">
+            <p class="p-luna-leo">Leo</p>
+          </div>
+          <div class="ascendente">
+            <img src="../img/ascendente.png" alt=" simbolo de ascendente">
+            <p class="asc-geminis"> Géminis</p>
+          </div>
+        </div>
+        <div id="big3-id" class="big3">
             <img src="../img/sol.png" alt=" simbolo del sol">
             <p>Cáncer</p>
             <img src="../img/luna.png" alt=" simbolo de la luna">
