--- a/paginas/talleres.html
+++ b/paginas/talleres.html
@@ -70,14 +70,14 @@
 <main id="main-talleres-id" class="main-talleres">
    <div class="taller-luna">
     <div class="luna-titulo">
-      <img src="../img/intensamente.png" alt="">
+      <img class="intensamente" src="../img/intensamente.png" alt="">
       <h2 class="h2-luna"> Taller Luna Natal</h2>
       <p class="p-luna">En éste taller online, abordaremos la función de la Luna en Astrología, en nuestra vida y en nuestra carta natal. Cuales son los patrones inconscientes que nos operan, como identificarlos y empezar a trabajar sobre ellos. Hablaremos de la Luna por Elemento, Signo y Casas. Una vez finalizado se llevarán la clase grabada, la guia en pdf con todas las lunas y un certificado de partipación a modo de recuerdo.</p>
     </div>
    </div>
    <div class="taller-ascendente">
     <div class="ascendente-titulo">
-      <img src="../img/cohete.png" alt="">
+      <img class="rocket" src="../img/cohete.png" alt="">
       <h2 class="h2-ascendente"> Taller Ascendente</h2>
       <p>En éste taller online, hablaremos de nuestra misión en la vida, como se manifiesta a traves de nuestro Ascendente y que información tenemos que incorporar a nuestra vida para continunar con nuestro proceso de evolución. Vamos a profundizar en el Ascendente por elemento, signo y planetas regentes...</p>
     </div>
