se cambiaron los p

--- a/paginas/cartanatal.html
+++ b/paginas/cartanatal.html
@@ -67,24 +67,25 @@
       </div>
 <main class="servicios-carta">
         <h1>El primer paso es cuestionarse..</h1>
-        <p> ¿Alguna vez viste tu Carta?. En esta sección podes solicitar tu reporte escrito (son muchas pero muchas páginas para que puedas leer con calma, sobre tus signos, planetas y posiciones) o podemos agendar una sesión online, en la que además de la charla en la que nos metemos de lleno en tu carta, te llevas también el informe escrito. Si llegaste hasta acá, es solo dar el próximo paso. ¿Qué esperás?.</p>
+        <p> ¿Alguna vez viste tu Carta?. En esta sección podemos agendar una sesión online, hablamos y nos metemos de lleno en tu carta, explorando sus energías, y además te llevas una breve guia en pdf. Tambíen podes solicitar el reporte escrito (son muchas pero muchas páginas para que puedas leer con calma, sobre tus signos, planetas y posiciones).Si llegaste hasta acá, es solo dar el próximo paso. ¿Qué esperás?.</p>
 </main>
 <!-- section servicio de cartas-->
 <section class="servicios">
     <div id="informe-online-id" class="carta-online">
-      <!-- Principio del widget de enlace de Calendly -->
-        <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-        <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-        <h2 class="h2-carta-online"><a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/astrox/lectura-de-carta-natal'});return false;">Carta Natal (Online)</a></h2>
-        <!-- Final del widget de enlace de Calendly -->
+     <!-- Principio del widget de enlace de Calendly -->
+         <link href="https://assets.calendly.com/assets/external/widget.css"          rel="stylesheet">
+         <script src="https://assets.calendly.com/assets/external/widget.js" type="text/         javascript" async></script>
+         <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/astrox/         lectura'});return false;"></a>
+         <!-- Final del widget de enlace de Calendly -->
         <p class="texto-carta-online"> Sesión de 2hs en la que te vas a llevar una pdoerosa herramienta de autoconocimiento, que te va a servir para toda tu vida. Vamos a realizar la lectura en videollamada y vamos a charlar sobre las energías presentes en tu carta (Sol, Luna, Ascendente, etc). Luego te llevas un breve informe escrito para que puedas utilizarlo como guía.</p>
         <p>Precio: $2500</p>
     </div>
     <div class="carta-revo">
         <!-- Principio del widget de enlace de Calendly -->
-        <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-        <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-        <h2 class="h2-carta-online"><a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/astrox/lectura-de-carta-natal'});return false;">Carta Natal + Revolución Solar (Online)</a></h2>
+          <link href="https://assets.calendly.com/assets/external/widget.css"           rel="stylesheet">
+          <script src="https://assets.calendly.com/assets/external/widget.js" type="text/          javascript" async></script>
+          <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/astrox/          lectura'});return false;"></a>
+          <!-- Final del widget de enlace de Calendly -->
         <p class="texto-carta-revo"> A la sesión de carta natal le sumamos la lectura de Revolución Solar, que nos muestra las energías que te van a acompañar durante todo el año (Tomando como referencia el dia de tu cumpleaños, para ver la posición de los planetas).Es una excelente herramienta para saber con que energías podemos contar y trabajar en ese año específico.</p>
         <p> Precio: $3000</p>
     </div>
