se cambiaron los p

--- a/paginas/cartanatal.html
+++ b/paginas/cartanatal.html
@@ -72,20 +72,23 @@
 <!-- section servicio de cartas-->
 <section class="servicios">
     <div id="informe-online-id" class="carta-online">
-     <!-- Principio del widget de enlace de Calendly -->
-         <link href="https://assets.calendly.com/assets/external/widget.css"          rel="stylesheet">
-         <script src="https://assets.calendly.com/assets/external/widget.js" type="text/         javascript" async></script>
-         <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/astrox/         lectura'});return false;"></a>
-         <!-- Final del widget de enlace de Calendly -->
+      <!-- Principio del widget de enlace de Calendly -->
+      <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+      <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+        <h2 class="h2-carta-online"><a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/astrox/lectura'});return false;">Carta Natal (Online)-Click acá </a></h2>
+        <!-- Final del widget de enlace de Calendly -->
         <p class="texto-carta-online"> Sesión de 2hs en la que te vas a llevar una pdoerosa herramienta de autoconocimiento, que te va a servir para toda tu vida. Vamos a realizar la lectura en videollamada y vamos a charlar sobre las energías presentes en tu carta (Sol, Luna, Ascendente, etc). Luego te llevas un breve informe escrito para que puedas utilizarlo como guía.</p>
         <p>Precio: $2500</p>
     </div>
     <div class="carta-revo">
-        <!-- Principio del widget de enlace de Calendly -->
-          <link href="https://assets.calendly.com/assets/external/widget.css"           rel="stylesheet">
-          <script src="https://assets.calendly.com/assets/external/widget.js" type="text/          javascript" async></script>
-          <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/astrox/          lectura'});return false;"></a>
-          <!-- Final del widget de enlace de Calendly -->
+      <!-- Principio del widget de enlace de Calendly -->
+      <link href="https://assets.calendly.com/assets/external/widget.css"      rel="stylesheet">
+      <script src="https://assets.calendly.com/assets/external/widget.js" type="text/     javascript" async></script>
+      <h2 class="h2-carta-online"><a href="" onclick="Calendly.initPopupWidget     ({url: 'https://calendly.com/astrox/lectura'});return false;">Carta Natal +Revolución Solar (Online)-Click acá</a></h2>
+      <!-- Final del widget de enlace de Calendly -->
+
+
+
         <p class="texto-carta-revo"> A la sesión de carta natal le sumamos la lectura de Revolución Solar, que nos muestra las energías que te van a acompañar durante todo el año (Tomando como referencia el dia de tu cumpleaños, para ver la posición de los planetas).Es una excelente herramienta para saber con que energías podemos contar y trabajar en ese año específico.</p>
         <p> Precio: $3000</p>
     </div>
