se modificaron titulos, se borro carpeta zip

--- a/paginas/astro101.html
+++ b/paginas/astro101.html
@@ -74,7 +74,7 @@
       </div>
       <!-- arranca el main---------------->
     <main id="main-101-id" class="main-101">
-        <h1>Astro 101: Nuestra Sección dedicada para que sigas aprendiendo</h1>
+        <h1>ASTRO 101: NUESTRA SECCION DEDICADA A QUE SIGAS APRENDIENDO</h1>
         <div id="dropdown-id" class="dropdown">
           <a class="btn btn-secondary btn-lg dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Artículos
@@ -86,7 +86,7 @@
           </ul>
         </div>
         <div class="aside">
-          <h2 class="lista"> Artículos</h2>
+          <h2 class="lista"> ARTICULOS</h2>
           <ul>
             <li> <a href="#pluton">Plutón</a></li>
             <li><a href="#jupiter">Júpiter</a></li>
@@ -95,17 +95,17 @@
           </ul>
         </div>
         <div id="pluton" class="pluton-101" data-aos="fade-right" data-aos-delat="1000" data-aos-duration="1000">
-            <h2>El planeta de la profundidad y transformación:</h2>
+            <h2>EL PLANETA DE LA PROFUNDIDAD Y LA TRANSFORMACION: </h2>
             <img src="../img/conociendo-pluton.jpg" alt="tarjeta de planeta plutón">
             <p>Plutón nos remite a esa parte tan profunda dentro nuestro, que a veces ni nosotrxs sabemos que cosas guardamos ahí (a veces a drede y otras nos olvidamos). Pero, ¿qué pasa si le damos luz a nuestras sombras mas oscuras?. Te invito a que leas éste artículo que seguro te va a gustar....<a href="../paginas/pluton.html" target="blank">Seguir leyendo...</a></p>
          </div>
          <div id="jupiter" class="jupiter-101" data-aos="fade-left" data-aos-delat="500" data-aos-duration="1000">
-            <h2>Júpiter, el planeta que agranda todo lo que toca: </h2>
+            <h2>JUPITER, EL PLANETA QUE AGRANDA TODO LO QUE TOCA: </h2>
              <img src="../img/conociendo-jupiter.jpg" alt="tarjeta de planeta plutón">
              <p>Júpiter, la gran lupa que maximiza todo lo que toca, lo bueno y lo no tan bueno. A veces se nos va la mano en energía, acciones y traen sus consecuencias. ¿qué pasa cuando tenemos muy internalizado que cuanto mas es mejor? ¿como balanceamos ésta energía que parece tan tan buena, dentro nuestro?...<a href="" target="blank">Seguir leyendo...</a></p>
          </div>
          <div id="luna" class="luna-101" data-aos="fade-right" data-aos-delat="500" data-aos-duration="1000">
-            <h2>La Luna y nuestros mecanismos inconscientes:</h2>
+            <h2>LA LUNA Y NUESTROS MECANISMOS INCONSCIENTES:</h2>
              <img src="../img/conociendo-luna.jpg" alt="tarjeta de planeta plutón">
              <p>Nuestra gran luminaria, que nos mueve los hilos desde el inconsciente. Hermosa, cambiante, movediza, oculta y visible. ¿por qué es tan importante el papel que juega en nuestra carta? ¿es verdad que nos influye tanto en nuestra vida diaria?...<a href="" target="blank">Seguir leyendo...</a></p>
          </div>
