--- a/paginas/cartanatal.html
+++ b/paginas/cartanatal.html
@@ -66,7 +66,7 @@
         </header>
       </div>
 <main class="servicios-carta">
-        <h1>El primer paso es cuestionarse..</h1>
+        <h1>EL PRIMER PASO ES CUESTIONARSE..</h1>
         <p> ¿Alguna vez viste tu Carta?. En esta sección podemos agendar una sesión online, hablamos y nos metemos de lleno en tu carta, explorando sus energías, y además te llevas una breve guia en pdf. Tambíen podes solicitar el reporte escrito (son muchas pero muchas páginas para que puedas leer con calma, sobre tus signos, planetas y posiciones).Si llegaste hasta acá, es solo dar el próximo paso. ¿Qué esperás?.</p>
 </main>
 <!-- section servicio de cartas-->
@@ -75,7 +75,7 @@
       <!-- Principio del widget de enlace de Calendly -->
       <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
       <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-        <h2 class="h2-carta-online"><a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/astrox/lectura'});return false;">Carta Natal (Online)-Click acá </a></h2>
+        <h2 class="h2-carta-online"><a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/astrox/lectura'});return false;">CARTA NATAL (ONLINE) -CLICK </a></h2>
         <!-- Final del widget de enlace de Calendly -->
         <p class="texto-carta-online"> Sesión de 2hs en la que te vas a llevar una pdoerosa herramienta de autoconocimiento, que te va a servir para toda tu vida. Vamos a realizar la lectura en videollamada y vamos a charlar sobre las energías presentes en tu carta (Sol, Luna, Ascendente, etc). Luego te llevas un breve informe escrito para que puedas utilizarlo como guía.</p>
         <p>Precio: $2500</p>
@@ -84,21 +84,18 @@
       <!-- Principio del widget de enlace de Calendly -->
       <link href="https://assets.calendly.com/assets/external/widget.css"      rel="stylesheet">
       <script src="https://assets.calendly.com/assets/external/widget.js" type="text/     javascript" async></script>
-      <h2 class="h2-carta-online"><a href="" onclick="Calendly.initPopupWidget     ({url: 'https://calendly.com/astrox/lectura'});return false;">Carta Natal +Revolución Solar (Online)-Click acá</a></h2>
+      <h2 class="h2-carta-online"><a href="" onclick="Calendly.initPopupWidget     ({url: 'https://calendly.com/astrox/lectura'});return false;">CARTA NATAL + REVOLUCION SOLAR  (ONLINE) -CLICK</a></h2>
       <!-- Final del widget de enlace de Calendly -->
-
-
-
-        <p class="texto-carta-revo"> A la sesión de carta natal le sumamos la lectura de Revolución Solar, que nos muestra las energías que te van a acompañar durante todo el año (Tomando como referencia el dia de tu cumpleaños, para ver la posición de los planetas).Es una excelente herramienta para saber con que energías podemos contar y trabajar en ese año específico.</p>
+     <p class="texto-carta-revo"> A la sesión de carta natal le sumamos la lectura de Revolución Solar, que nos muestra las energías que te van a acompañar durante todo el año (Tomando como referencia el dia de tu cumpleaños, para ver la posición de los planetas).Es una excelente herramienta para saber con que energías podemos contar y trabajar en ese año específico.</p>
         <p> Precio: $3000</p>
     </div>
     <div class="carta-escrita">
-      <h2 id="informe-escrito-id"  class="h2-carta-escrita"><a href="">Carta Natal (Informe escrito)</a> </h2>
+      <h2 id="informe-escrito-id"  class="h2-carta-escrita"><a href="">CARTA NATAL (INFORME ESCRITO)</a> </h2>
       <p class="texto-carta-escrita"> Si sos de lxs que prefieren leer, el informe escrito es ideal para vos. Detallamos en una extensa cantidad de páginas, toda la infromacón sobre tu Carta Natal, hablando del Sol, Luna, Ascendente y los aspectos, para que tengas una guía (con muchísima información) y la puedas leer cuantas veces quieras. </p>
       <p>Precio: $1500</p>
  </div>
  <div class="carta-escrita-revo">
-     <h2 class="h2-carta-escrita-revo"> <a href="">Cara Natal + Revolución Solar (Informe Escrito)</a></h2>
+     <h2 class="h2-carta-escrita-revo"> <a href="">CARTA NATAL + REVOLUCION SOLAR (INFORME ESCRITO)</a></h2>
      <p class="texto-carta-escrita-revo"> Al informe escrito le sumamos el informe de Revolución Solar, detallando las energías que te van a acompañar durante todo el año (desde el día de tu cumpleaños hasta el próximo).</p>
      <p>Precio: $2000</p>
  </div>
@@ -106,18 +103,18 @@
 <section class="preguntas-frecuentes">
   <div class="divisor-preguntas">
     <img src="../img/pregunta.png" alt="imagen signo de pregunta">
-    <h3 class="preguntas"> ¿Dudas?</h3>
+    <h3 class="preguntas"> ¿DUDAS?</h3>
   </div>
   
-  <h4 class="pregunta-1"> ¿Para que me sirve conocer mi Carta Natal?</h4>
+  <h4 class="pregunta-1"> ¿PARA QUE ME SIRVE CONOCER MI CARTA NATAL?</h4>
   <p>Nuestra Carta Natal, es la puerta de acceso a un conocimiento propio muy profundo. En ella podemos ver las energías que nos mueven y operan, tomando conciencia de ellas, para poder utilizarlas a nuestro favor en un futuro, aprendiendo a transformarnos y salir de la repetición de situaciones. Es importante entender, que nuesto proceso de vida está atravesado por un sín fín de experiencias, que tienen como fin último nuestra propia trascendencia y constante evolución. Es propio del Ser Humano vivir cambiando y moviendonos, pero a veces parece que nos olvidamos, y nos quedamos atascados con las mismas situaciones, actitudes, personas, etc. La Astrología brinda una poderosa herramienta, para que realmente empieces a darle luz a todos tus patrones, entendiendote muchísimo mejor y dándote la posibilidad de elegir concientemente.</p>
-  <h4 class="pregunta-2"> ¿La sesión Online queda grabada?</h4>
+  <h4 class="pregunta-2"> ¿LA SESION ONLINE QUEDA GRABADA?</h4>
   <p>¡Sí!. La sesión queda grabada, para que la puedas ver cuantas veces necesites. Tambíen entregamos un breve informe de repaso, para que puedas consultarlos por si te olvidas algún detalle.</p>
-  <h4 class="pregunta-3"> ¿Cual es la diferencia entre la sesión Online y el informe escrito?</h4>
+  <h4 class="pregunta-3"> ¿CUAL ES LA DIFERENCIA ENTRE LA SESION ONLINE Y EL INFORME ESCRITO?</h4>
   <p>En la sesión Online, hay un intercambio mas dinámico con la persona. Abordamos la Carta en profundidad, explicando detalladamente las energías, signos, planetas y casas que la componen. Si surge alguna duda o inquietud, podemos desarrollarla en esa sesión (a veces aparecen cosas muy interesantes, que se ven en el momento y por eso es una experiencia muy enriquecedora). En cuanto al informe escrito, también detallamos la totalidad de la carta, en una gran cantidad de páginas para que las puedas leer cuantas veces quieras, lo único que cambia en este informe son las inquietudes que pueden despejarse por fuera de lo escrito, ya que son mas limitadas.</p>
-  <h4 class="pregunta-4">¿Como se reserva la sesión? ¿Y el informe?</h4>
+  <h4 class="pregunta-4">¿COMO SE RESERVA LA SESION? ¿Y EL INFORME?</h4>
   <p>Para reservar la sesión online, primero acordamos la fecha en la que se va a llevar a cabo y se reserva abonando la mitad de la carta. Luego el día antes de la sesión se abona la otra mitad que resta. Para el informe escrito, se abona la totalidad del mismo, y aproximadamente en 1 semana, se envía el informe detallado de la persona. Ambas modalidades cuentan con un regalito extra al final. PD: Sí elegís la sesión Online recordá tener una buena conexión a internet, así el intermcabio se hace dinámico.</p>
-  <h4 class="pregunta-5"> ¿Le puedo regalar la Carta Natal a otra persona?</h4>
+  <h4 class="pregunta-5"> ¿LE PUEDO REGALAR LA CARTA NATAL A OTRA PERSONA?</h4>
   <p> ¡Sí!. Contamos con Gift Cards para que puedas regalar a cualquier persona que quieras, solo necesitamos los datos (fecha, hora, ciudad de nacimiento) de la persona que va a recibir la lectura en cuestión y nosotros nos encargamos del resto. Tambien recorda aclararnos el motivo del regalo, y el número de contacto de esa persona, asi últimamos los detalles.</p>
 </section>
  <footer>
