--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <!-- main -->
 <main class="main-index">
   <div class="contenido-principal">
-    <h1> Reconectate con vos Mismx y con el <span> Mundo</span></h1>
+    <h1> RECONECTATE CON VOS MISMX Y CON EL <span> MUNDO </span></h1>
     <div class="bloque-imagenes">
       <p> Bienvenidx a este universo maravilloso, que te va a permitir descubrirte y trasnformarte en profundidad. Todxs tenemos potenciales, luz y sombra dentro nuestro, y es necesario empezar a observarlos más de cerca para poder evolucionar. </span> </p>
       <img src="img/mano-astro.png" alt=" imagen de manos y mundo astrologico" class="mano">
@@ -82,7 +82,7 @@
 <!-- section carta astral-->
 <section class="section-carta">
   <div class="section-astrox">
-    <h2> Adentrate en tu Carta Natal</h2>
+    <h2> ADENTRATE EN TU CARTA NATAL</h2>
     <p class="texto-h2"> Vamos a conocer que energías acompañan tu existencia, como reconocerlas, aprovecharlas y como empezar a salir de los circulos de repetición.</p>
     <div class="cartanatal-servicios">
       <div class="cartanatal-index"> <!-- este div es circular-->
@@ -92,7 +92,7 @@
       </div>
     </div>
     <div class="servicios-texto">
-      <h3>¿Qué contiene la Carta?</h3>
+      <h3>¿QUE CONTIENE LA CARTA?</h3>
       <ul>
         <li>Sol, Luna y Ascendente (como energías principales)</li>
         <li>Cómo te vinculas (Venus) y como te lanzás por lo que querés (Marte)</li>
@@ -109,7 +109,7 @@
 <!-- section de cursos y talleres-->
 <section class="section-cursos">
   <div class="texto-cursos">
-    <h3 class="cursos"><a href="talleres.html">Cursos y Talleres</a></h3>
+    <h3 class="cursos"><a href="talleres.html">CURSOS Y TALLERES</a></h3>
     <p>En nuestros Cursos y Talleres, vas a poder profundizar en diversos temas (Lunas, Ascendentes, Venus, Marte, etc..). Contamos con clases en vivo (por Zoom) o clases grabadas, ¡para que las veas en el momento que vos quieras!. Al finalizar te enviaremos un certificado de participación a modo de recuerdo. A continuación te dejamos el video de La Luna en Cáncer, a modo de prueba.</p>
   </div>
   <div class="video-youtube">
@@ -121,7 +121,7 @@
 
 <!-- section astro adicto carousel-->
 <section class="carousel">
-  <h4> Astro 101</h4>
+  <h4> ASTRO 101</h4>
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -132,21 +132,21 @@
       <div class="carousel-item active">
         <img src="img/conociendo-pluton.jpg" class="conociendo-pluton" alt="tarjeta de pluton">
         <div class="carousel-caption d-none d-md-block">
-          <h5>El Planeta de la Transformación</h5>
+          <h5>EL PLANETA DE LA TRANSFORMACION</h5>
           <p>Plutón nos remite a esa parte tan profunda dentro nuestro, que a veces ni nosotrxs sabemos que cosas guardamos ahí (a veces a drede y otras nos olvidamos). Pero, ¿qué pasa si le damos luz a nuestras sombras mas oscuras?. Te invito a que leas éste artículo que seguro te va a gustar...</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="img/conociendo-jupiter.jpg" class="conociendo-jupiter" alt="tarjeta de jupiter">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Hablemos de expandirnos</h5>
+          <h5>HABLEMOS DE EXPANDIRNOS</h5>
           <p>Júpiter, la gran lupa que maximiza todo lo que toca, lo bueno y lo no tan bueno. A veces se nos va la mano en energía, acciones y traen sus consecuencias. ¿qué pasa cuando tenemos muy internalizado que cuanto mas es mejor? ¿como balanceamos ésta energía que parece tan tan buena, dentro nuestro?...</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="img/conociendo-luna.jpg" class="conociendo-luna" alt="tarjeta de la luna">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Los mecanismos defensivos internos</h5>
+          <h5>LOS MECANISMOS INTERNOS</h5>
           <p>Nuestra gran luminaria, que nos mueve los hilos desde el inconsciente. Hermosa, cambiante, movediza, oculta y visible. ¿por qué es tan importante el papel que juega en nuestra carta? ¿es verdad que nos influye tanto en nuestra vida diaria?...</p>
         </div>
       </div>
