--- a/paginas/talleres.html
+++ b/paginas/talleres.html
@@ -71,28 +71,28 @@
    <div class="taller-luna">
     <div class="luna-titulo">
       <img class="intensamente" src="../img/intensamente.png" alt="">
-      <h2 class="h2-luna"> Taller Luna Natal</h2>
+      <h2 class="h2-luna"> TALLER LUNA NATAL</h2>
       <p class="p-luna">En éste taller online, abordaremos la función de la Luna en Astrología, en nuestra vida y en nuestra carta natal. Cuales son los patrones inconscientes que nos operan, como identificarlos y empezar a trabajar sobre ellos. Hablaremos de la Luna por Elemento, Signo y Casas. Una vez finalizado se llevarán la clase grabada, la guia en pdf con todas las lunas y un certificado de partipación a modo de recuerdo.</p>
     </div>
    </div>
    <div class="taller-ascendente">
     <div class="ascendente-titulo">
       <img class="rocket" src="../img/cohete.png" alt="">
-      <h2 class="h2-ascendente"> Taller Ascendente</h2>
+      <h2 class="h2-ascendente"> TALLER ASCENDENTE</h2>
       <p>En éste taller online, hablaremos de nuestra misión en la vida, como se manifiesta a traves de nuestro Ascendente y que información tenemos que incorporar a nuestra vida para continunar con nuestro proceso de evolución. Vamos a profundizar en el Ascendente por elemento, signo y planetas regentes...</p>
     </div>
    </div>
    <div class="taller-marte">
     <div class="marte-titulo">
       <img src="../img/ares.png" alt="">
-      <h2 class="h2-marte"> Taller Marte Natal</h2>
+      <h2 class="h2-marte"> TALLER MARTE NATAL</h2>
       <p>¿Qué pasa cuando no puedo ir por las cosas que quiero?. ¿Por qué siempre me encuentro frenadx al momento de tomar accón?. Si alguna de estas preguntas llamo tu atención, tal vez debas mirar este taller. Cuando hablamos de Marte en nuestra carta, hablamos de la fuerza y potencia para tomar acción y hacer que las cosas que queremos, sucedan. Pero..¿Qué pasa cuando nuestro Marte esta bloqueado?. En este taller vamos a apdender a idenfiticar como es nuestra manera de salir al mundo, de ir por lo que queremos, que necesita nuestro Marte para expresarse y que pasa cuando éste se encuentra apagado. ¿Cómo lo despertamos?..</p>
     </div>
    </div>
    <div class="taller-venus">
     <div class="venus-titulo">
       <img src="../img/afrodita.png" alt="">
-      <h2 class="h2-venus">Taller Venus Natal</h2>
+      <h2 class="h2-venus">TALLER VENUS NATAL</h2>
       <p>Afrodita, la diosa del amor y el deseo, representada por Venus en nuestra carta. Cuándo hablamos de relaciones vinculares es ella quien entra en juego, la que nos habla de como es mi vínculo con el otrx, que necesito yo para sentirme deseado y satisfecho a un nivel físico y energético, que cosas le estoy pidiendo a ese otrx que no me puedo pedir a mi mismx.¿Que pasa si empiezo a entender como son mis juegos vinculares?. El primer paso es cuestionarse. Cuando vemos los patrones que subyacen en mi, puedo elegir desde donde me voy a relacionar con otrxs y romper con las repeticiones.</p>
     </div>
    </div>
